<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/cb_send_clipboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="SendClipboard"
        android:text="@string/fun_sendclipboard" />

    <CheckBox
        android:id="@+id/cb_recv_clipboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="RecvClipboard"
        android:text="@string/fun_recvclipboard" />

    <Button
        android:id="@+id/btn_share_clipboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fun_shareclipboard" />
</LinearLayout>