<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:showDividers="middle|end|beginning|none">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/help_add_pair" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/function"
        android:textColor="@color/colorPrimary"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/tv_tip_unpaired"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/tip_unpaired"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_tip_paring"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_tip_paring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tip_paring" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/plugins_small_ui"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/divider_white_1dp"
        android:orientation="vertical" />

</LinearLayout>